--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
         </section>
     </main>
+    <footer class="footer">Desarrollado por Carlos Cardona</footer>
         <script src="app.js"></script>
         </body>
 </html>
